omnibus_exp/thrift/_antlr/ThriftParser.py
# flake8: noqa
# type: ignore
# Generated from Thrift.g4 by ANTLR 4.8
# encoding: utf-8
from ..._vendor.antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ThriftParser ( Parser ):

    grammarFileName = "Thrift.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'='", "'{'", "'}'", "':'", "'('", 
                     "')'", "'<'", "','", "'>'", "'+'", "'-'", "'.'", "'E'", 
                     "'e'", "'['", "']'", "'\"'", "'''", "';'", "'binary'", 
                     "'bool'", "'byte'", "'c_glib'", "'const'", "'cpp'", 
                     "'cpp_include'", "'cpp_type'", "'csharp'", "'delphi'", 
                     "'double'", "'enum'", "'exception'", "'extends'", "'go'", 
                     "'i16'", "'i32'", "'i64'", "'i8'", "'include'", "'java'", 
                     "'js'", "'list'", "'lua'", "'map'", "'namespace'", 
                     "'netcore'", "'oneway'", "'optional'", "'perl'", "'php'", 
                     "'py'", "'py.twisted'", "'rb'", "'required'", "'senum'", 
                     "'service'", "'set'", "'slist'", "'st'", "'string'", 
                     "'struct'", "'throws'", "'typedef'", "'union'", "'void'", 
                     "'xsd'", "'xsd_all'", "'xsd_attrs'", "'xsd_nillable'", 
                     "'xsd_optional'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BINARY", "BOOL", "BYTE", "C_GLIB", "CONST", 
                      "CPP", "CPP_INCLUDE", "CPP_TYPE", "CSHARP", "DELPHI", 
                      "DOUBLE", "ENUM", "EXCEPTION", "EXTENDS", "GO", "I16", 
                      "I32", "I64", "I8", "INCLUDE", "JAVA", "JS", "LIST", 
                      "LUA", "MAP", "NAMESPACE", "NETCORE", "ONEWAY", "OPTIONAL", 
                      "PERL", "PHP", "PY", "PY_TWISTED", "RB", "REQUIRED", 
                      "SENUM", "SERVICE", "SET", "SLIST", "ST", "STRING", 
                      "STRUCT", "THROWS", "TYPEDEF", "UNION", "VOID", "XSD", 
                      "XSD_ALL", "XSD_ATTRS", "XSD_NILLABLE", "XSD_OPTIONAL", 
                      "IDENTIFIER", "DIGIT", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_document = 0
    RULE_header = 1
    RULE_include = 2
    RULE_cppInclude = 3
    RULE_namespace = 4
    RULE_namespaceScope = 5
    RULE_definition = 6
    RULE_const = 7
    RULE_typedef = 8
    RULE_enum = 9
    RULE_senum = 10
    RULE_struct = 11
    RULE_union = 12
    RULE_exception = 13
    RULE_service = 14
    RULE_field = 15
    RULE_fieldID = 16
    RULE_fieldReq = 17
    RULE_xsdFieldOptions = 18
    RULE_xsdAttrs = 19
    RULE_function = 20
    RULE_functionType = 21
    RULE_throws_ = 22
    RULE_fieldType = 23
    RULE_definitionType = 24
    RULE_baseType = 25
    RULE_containerType = 26
    RULE_mapType = 27
    RULE_setType = 28
    RULE_listType = 29
    RULE_cppType = 30
    RULE_constValue = 31
    RULE_intConstant = 32
    RULE_doubleConstant = 33
    RULE_constList = 34
    RULE_constMap = 35
    RULE_literal = 36
    RULE_listSeparator = 37
    RULE_identifier = 38

    ruleNames =  [ "document", "header", "include", "cppInclude", "namespace", 
                   "namespaceScope", "definition", "const", "typedef", "enum", 
                   "senum", "struct", "union", "exception", "service", "field", 
                   "fieldID", "fieldReq", "xsdFieldOptions", "xsdAttrs", 
                   "function", "functionType", "throws_", "fieldType", "definitionType", 
                   "baseType", "containerType", "mapType", "setType", "listType", 
                   "cppType", "constValue", "intConstant", "doubleConstant", 
                   "constList", "constMap", "literal", "listSeparator", 
                   "identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    BINARY=21
    BOOL=22
    BYTE=23
    C_GLIB=24
    CONST=25
    CPP=26
    CPP_INCLUDE=27
    CPP_TYPE=28
    CSHARP=29
    DELPHI=30
    DOUBLE=31
    ENUM=32
    EXCEPTION=33
    EXTENDS=34
    GO=35
    I16=36
    I32=37
    I64=38
    I8=39
    INCLUDE=40
    JAVA=41
    JS=42
    LIST=43
    LUA=44
    MAP=45
    NAMESPACE=46
    NETCORE=47
    ONEWAY=48
    OPTIONAL=49
    PERL=50
    PHP=51
    PY=52
    PY_TWISTED=53
    RB=54
    REQUIRED=55
    SENUM=56
    SERVICE=57
    SET=58
    SLIST=59
    ST=60
    STRING=61
    STRUCT=62
    THROWS=63
    TYPEDEF=64
    UNION=65
    VOID=66
    XSD=67
    XSD_ALL=68
    XSD_ATTRS=69
    XSD_NILLABLE=70
    XSD_OPTIONAL=71
    IDENTIFIER=72
    DIGIT=73
    WS=74
    COMMENT=75
    LINE_COMMENT=76

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ThriftParser.EOF, 0)

        def header(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThriftParser.HeaderContext)
            else:
                return self.getTypedRuleContext(ThriftParser.HeaderContext,i)


        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThriftParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(ThriftParser.DefinitionContext,i)


        def getRuleIndex(self):
            return ThriftParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = ThriftParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ThriftParser.CPP_INCLUDE) | (1 << ThriftParser.INCLUDE) | (1 << ThriftParser.NAMESPACE))) != 0):
                self.state = 78
                self.header()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 25)) & ~0x3f) == 0 and ((1 << (_la - 25)) & ((1 << (ThriftParser.CONST - 25)) | (1 << (ThriftParser.ENUM - 25)) | (1 << (ThriftParser.EXCEPTION - 25)) | (1 << (ThriftParser.SENUM - 25)) | (1 << (ThriftParser.SERVICE - 25)) | (1 << (ThriftParser.STRUCT - 25)) | (1 << (ThriftParser.TYPEDEF - 25)) | (1 << (ThriftParser.UNION - 25)))) != 0):
                self.state = 84
                self.definition()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(ThriftParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self):
            return self.getTypedRuleContext(ThriftParser.IncludeContext,0)


        def cppInclude(self):
            return self.getTypedRuleContext(ThriftParser.CppIncludeContext,0)


        def namespace(self):
            return self.getTypedRuleContext(ThriftParser.NamespaceContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader" ):
                return visitor.visitHeader(self)
            else:
                return visitor.visitChildren(self)




    def header(self):

        localctx = ThriftParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ThriftParser.INCLUDE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.include()
                pass
            elif token in [ThriftParser.CPP_INCLUDE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.cppInclude()
                pass
            elif token in [ThriftParser.NAMESPACE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.namespace()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(ThriftParser.INCLUDE, 0)

        def literal(self):
            return self.getTypedRuleContext(ThriftParser.LiteralContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = ThriftParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(ThriftParser.INCLUDE)
            self.state = 98
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CppIncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CPP_INCLUDE(self):
            return self.getToken(ThriftParser.CPP_INCLUDE, 0)

        def literal(self):
            return self.getTypedRuleContext(ThriftParser.LiteralContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_cppInclude

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCppInclude" ):
                listener.enterCppInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCppInclude" ):
                listener.exitCppInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCppInclude" ):
                return visitor.visitCppInclude(self)
            else:
                return visitor.visitChildren(self)




    def cppInclude(self):

        localctx = ThriftParser.CppIncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_cppInclude)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(ThriftParser.CPP_INCLUDE)
            self.state = 101
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAMESPACE(self):
            return self.getToken(ThriftParser.NAMESPACE, 0)

        def namespaceScope(self):
            return self.getTypedRuleContext(ThriftParser.NamespaceScopeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(ThriftParser.IdentifierContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_namespace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespace" ):
                listener.enterNamespace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespace" ):
                listener.exitNamespace(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamespace" ):
                return visitor.visitNamespace(self)
            else:
                return visitor.visitChildren(self)




    def namespace(self):

        localctx = ThriftParser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_namespace)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(ThriftParser.NAMESPACE)
            self.state = 104
            self.namespaceScope()
            self.state = 105
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceScopeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def C_GLIB(self):
            return self.getToken(ThriftParser.C_GLIB, 0)

        def CPP(self):
            return self.getToken(ThriftParser.CPP, 0)

        def CSHARP(self):
            return self.getToken(ThriftParser.CSHARP, 0)

        def DELPHI(self):
            return self.getToken(ThriftParser.DELPHI, 0)

        def GO(self):
            return self.getToken(ThriftParser.GO, 0)

        def JAVA(self):
            return self.getToken(ThriftParser.JAVA, 0)

        def JS(self):
            return self.getToken(ThriftParser.JS, 0)

        def LUA(self):
            return self.getToken(ThriftParser.LUA, 0)

        def NETCORE(self):
            return self.getToken(ThriftParser.NETCORE, 0)

        def PERL(self):
            return self.getToken(ThriftParser.PERL, 0)

        def PHP(self):
            return self.getToken(ThriftParser.PHP, 0)

        def PY(self):
            return self.getToken(ThriftParser.PY, 0)

        def PY_TWISTED(self):
            return self.getToken(ThriftParser.PY_TWISTED, 0)

        def RB(self):
            return self.getToken(ThriftParser.RB, 0)

        def ST(self):
            return self.getToken(ThriftParser.ST, 0)

        def XSD(self):
            return self.getToken(ThriftParser.XSD, 0)

        def getRuleIndex(self):
            return ThriftParser.RULE_namespaceScope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespaceScope" ):
                listener.enterNamespaceScope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespaceScope" ):
                listener.exitNamespaceScope(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamespaceScope" ):
                return visitor.visitNamespaceScope(self)
            else:
                return visitor.visitChildren(self)




    def namespaceScope(self):

        localctx = ThriftParser.NamespaceScopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_namespaceScope)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ThriftParser.T__0) | (1 << ThriftParser.C_GLIB) | (1 << ThriftParser.CPP) | (1 << ThriftParser.CSHARP) | (1 << ThriftParser.DELPHI) | (1 << ThriftParser.GO) | (1 << ThriftParser.JAVA) | (1 << ThriftParser.JS) | (1 << ThriftParser.LUA) | (1 << ThriftParser.NETCORE) | (1 << ThriftParser.PERL) | (1 << ThriftParser.PHP) | (1 << ThriftParser.PY) | (1 << ThriftParser.PY_TWISTED) | (1 << ThriftParser.RB) | (1 << ThriftParser.ST))) != 0) or _la==ThriftParser.XSD):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def const(self):
            return self.getTypedRuleContext(ThriftParser.ConstContext,0)


        def typedef(self):
            return self.getTypedRuleContext(ThriftParser.TypedefContext,0)


        def enum(self):
            return self.getTypedRuleContext(ThriftParser.EnumContext,0)


        def senum(self):
            return self.getTypedRuleContext(ThriftParser.SenumContext,0)


        def struct(self):
            return self.getTypedRuleContext(ThriftParser.StructContext,0)


        def union(self):
            return self.getTypedRuleContext(ThriftParser.UnionContext,0)


        def exception(self):
            return self.getTypedRuleContext(ThriftParser.ExceptionContext,0)


        def service(self):
            return self.getTypedRuleContext(ThriftParser.ServiceContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = ThriftParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_definition)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ThriftParser.CONST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.const()
                pass
            elif token in [ThriftParser.TYPEDEF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.typedef()
                pass
            elif token in [ThriftParser.ENUM]:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.enum()
                pass
            elif token in [ThriftParser.SENUM]:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.senum()
                pass
            elif token in [ThriftParser.STRUCT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.struct()
                pass
            elif token in [ThriftParser.UNION]:
                self.enterOuterAlt(localctx, 6)
                self.state = 114
                self.union()
                pass
            elif token in [ThriftParser.EXCEPTION]:
                self.enterOuterAlt(localctx, 7)
                self.state = 115
                self.exception()
                pass
            elif token in [ThriftParser.SERVICE]:
                self.enterOuterAlt(localctx, 8)
                self.state = 116
                self.service()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(ThriftParser.CONST, 0)

        def fieldType(self):
            return self.getTypedRuleContext(ThriftParser.FieldTypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(ThriftParser.IdentifierContext,0)


        def constValue(self):
            return self.getTypedRuleContext(ThriftParser.ConstValueContext,0)


        def listSeparator(self):
            return self.getTypedRuleContext(ThriftParser.ListSeparatorContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_const

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst" ):
                listener.enterConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst" ):
                listener.exitConst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst" ):
                return visitor.visitConst(self)
            else:
                return visitor.visitChildren(self)




    def const(self):

        localctx = ThriftParser.ConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(ThriftParser.CONST)
            self.state = 120
            self.fieldType()
            self.state = 121
            self.identifier()
            self.state = 122
            self.match(ThriftParser.T__1)
            self.state = 123
            self.constValue()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ThriftParser.T__8 or _la==ThriftParser.T__19:
                self.state = 124
                self.listSeparator()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPEDEF(self):
            return self.getToken(ThriftParser.TYPEDEF, 0)

        def definitionType(self):
            return self.getTypedRuleContext(ThriftParser.DefinitionTypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(ThriftParser.IdentifierContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_typedef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedef" ):
                listener.enterTypedef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedef" ):
                listener.exitTypedef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedef" ):
                return visitor.visitTypedef(self)
            else:
                return visitor.visitChildren(self)




    def typedef(self):

        localctx = ThriftParser.TypedefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typedef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(ThriftParser.TYPEDEF)
            self.state = 128
            self.definitionType()
            self.state = 129
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENUM(self):
            return self.getToken(ThriftParser.ENUM, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThriftParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(ThriftParser.IdentifierContext,i)


        def intConstant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThriftParser.IntConstantContext)
            else:
                return self.getTypedRuleContext(ThriftParser.IntConstantContext,i)


        def listSeparator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThriftParser.ListSeparatorContext)
            else:
                return self.getTypedRuleContext(ThriftParser.ListSeparatorContext,i)


        def getRuleIndex(self):
            return ThriftParser.RULE_enum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum" ):
                listener.enterEnum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum" ):
                listener.exitEnum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum" ):
                return visitor.visitEnum(self)
            else:
                return visitor.visitChildren(self)




    def enum(self):

        localctx = ThriftParser.EnumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_enum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(ThriftParser.ENUM)
            self.state = 132
            self.identifier()
            self.state = 133
            self.match(ThriftParser.T__2)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ThriftParser.IDENTIFIER:
                self.state = 134
                self.identifier()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ThriftParser.T__1:
                    self.state = 135
                    self.match(ThriftParser.T__1)
                    self.state = 136
                    self.intConstant()


                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ThriftParser.T__8 or _la==ThriftParser.T__19:
                    self.state = 139
                    self.listSeparator()


                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 147
            self.match(ThriftParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SenumContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SENUM(self):
            return self.getToken(ThriftParser.SENUM, 0)

        def identifier(self):
            return self.getTypedRuleContext(ThriftParser.IdentifierContext,0)


        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThriftParser.LiteralContext)
            else:
                return self.getTypedRuleContext(ThriftParser.LiteralContext,i)


        def listSeparator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThriftParser.ListSeparatorContext)
            else:
                return self.getTypedRuleContext(ThriftParser.ListSeparatorContext,i)


        def getRuleIndex(self):
            return ThriftParser.RULE_senum
